# SimpleLeakDetector

./: .gitignore  CMakeLists.txt  HeapAllocHooker.cpp  Hooker.hpp  Injector.c  Injector.h  Injector.hpp  LeakDetector.cpp  LeakDetector.hpp  MallocHooker.cpp  MallocHooker_InlineHook.cpp  Utils.h  internals.h  readme.md
